--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "stdio.h": "c",
         "stdlib.h": "c",
         "typeinfo": "c",
-        "time.h": "c"
+        "time.h": "c",
+        "memory.h": "c"
     }
 }
